# RGAL

./: .gitignore  CMakeLists.txt  ProblemSearch.md  README.md  cookie  main.cpp
doc/: CNAPI.md  Cookie.md  ProblemSearch.md  SomethingFun.md  cookie.md
in_output/: TestConfig.h.in
include/imgui/: CMakeLists.txt
src/: CMakeLists.txt
src/backend/interface/: cn_offline_api.cpp
src/include/extlibs/cpr-master/cmake/: zlib_external.cmake
src/include/extlibs/cpr-master/include/: CMakeLists.txt
src/include/interface/: cn_offline_api.h
